# pdi-weather-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  cache.sqlite  cities2.txt  main.py  pyproject.toml  test_main.py
tests/: test_mapping.py  test_weather_api.py
weather/: __main__.py  mappings.py  output.py  typer_functions.py  weather_api.py
