[project]
name = "pdi-weather-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a16",
]

[tool.uv.workspace]
members = [
    "weather",
]
