[project]
name = "pdi-weather-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ty>=0.0.1a16",
    "types-requests>=2.32.4.20250611",
]
